# loan-calculator-py

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  cli.py  generate_udtf.py  loan_calculator.py  pyproject.toml  streamlit_app.py  test_loan_calculator.py  udtf.sql
scripts/: generate_loan_calculator_udtf.py  xirr_solver.py
udfs/: README.md  loan_calculator.sql  xirr.sql
