[project]
name = "loan-calculator-py"
version = "0.1.0"
description = "Loan calculator in python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.2",
    "pytest>=8.3.3",
    "pyxirr>=0.10.7",
    "streamlit>=1.38.0",
]

[tool.uv]
dev-dependencies = ["ipykernel>=6.29.5", "jupyter>=1.1.1", "ruff>=0.6.5"]
